# SciPyFST

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: run-tests.yml  test_pypi.yml
SciPyFST/: SciPyFST.py  fst.py
SciPyFST/fstUtils/: __init__.py  copyWithRenameStates.py  fstFromDict.py  toDot.py  toMdTable.py  toTable.py  toTexTable.py
examples/: README.ipynb  README.md  devExamplesContext.py  devSciPyFST.py  example_01.ipynb  example_02_Play_FST.ipynb  example_03_Wavedrom.ipynb  example_04_Add_State_Transition_etc.ipynb  example_05_asMoore.ipynb  example_06_forColab.ipynb  example_07_forColab.ipynb  example_08_testFST.ipynb  example_09_getTestSignal.ipynb  example_10_ComparisonMatrix.ipynb  example_11_isContains.ipynb  example_12_FSMnotFST.ipynb  fst_graphviz.py  generate_image_for_readme.ipynb
examples/examples_data/: MealyFST.py  Mealy_FST.txt
tests/: devContext.py  devSciPyFST.py  testSciPyFST.py  test_init_FST.py
util/: get_last_ver_from_pypi.sh
util/img/: brainMealy  brainMoore  fstWithUnreachableStates_1  fstWithUnreachableStates_2  fstWithUnreachableStates_3
