[metadata]
name = SciPyFST
version = NEWSciPyFSTVERSION
author = MorriganR
author_email = dasha@occamlab.com
description = A small package for FST (Finite-state transducer) demo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorriganR/SciPyFST
project_urls =
    Bug Tracker = https://github.com/MorriganR/SciPyFST/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    SciPyFST
python_requires = >=3.6
